<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFEF"

    tools:context="com.rfid_demo.main.MainActivity">
    <!--   android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/activity_vertical_margin" -->

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bar"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"></TextView>
    <!-- <RadioGroup
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin">
        android:background="@android:color/white"
        android:drawableTop="@mipmap/ic_launcher"
        top的图片直接设置选择器的了，选择器状态state
        <RadioButton
            style="@style/MainRadioButtonStyle"
            android:tag="0"
            android:textColor="@color/blu"
            android:text="@string/inventory_epc" />

        <RadioButton
            style="@style/MainRadioButtonStyle"
            android:tag="1"
            android:text="@string/single_tag" />

        <RadioButton
            style="@style/MainRadioButtonStyle"
            android:tag="2"
            android:text="@string/lock" />
        <RadioButton
            style="@style/MainRadioButtonStyle"
            android:tag="3"
            android:text="@string/kill" />
        <RadioButton
            style="@style/MainRadioButtonStyle"
            android:tag="4"
            android:text="@string/setting_" />
    </RadioGroup> -->
    <LinearLayout
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="@drawable/title_bar"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/textView_f2"
            style="@style/TabItem"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/read_card" />

        <TextView
            android:id="@+id/textView_f3"
            style="@style/TabItem"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/sys_info" />

        <TextView
            android:id="@+id/textView_f5"
            style="@style/TabItem"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/quit_app" />

    </LinearLayout>

    <FrameLayout

        android:id="@+id/framelayout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/navigation"
        android:layout_below="@id/title"
        android:layout_marginBottom="0dp">

    </FrameLayout>

    <!-- <android.support.v4.view.ViewPager
        android:layout_above="@id/navigation"
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <android.support.v4.view.PagerTitleStrip
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="@color/gre"/>
    </android.support.v4.view.ViewPager>   -->

</RelativeLayout>
