<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="0dp"
    android:layout_marginRight="0dp"
    android:baselineAligned="true"
    android:divider="?android:attr/dividerHorizontal"
    android:orientation="horizontal"
    android:showDividers="middle">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:gravity="center">

                <TableRow
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recv_power" />

                    <Spinner
                        android:id="@+id/Spinner01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </TableRow>

                <TableRow
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/send_power" />

                    <Spinner
                        android:id="@+id/spinner4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </TableRow>

                <TableRow
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/attenuation_value" />

                    <EditText
                        android:id="@+id/editText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number" />
                </TableRow>

                <TableRow
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center|center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right">

                        <Button
                            android:id="@+id/Button01"
                            android:layout_width="120dp"
                            android:layout_height="50dp"
                            android:background="@drawable/btn_stype"
                            android:text="@string/str_query"
                            android:textColor="@drawable/button_color" />

                        <Button
                            android:id="@+id/button1"
                            android:layout_width="120dp"
                            android:layout_height="50dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/btn_stype"
                            android:text="@string/str_set"
                            android:textColor="@drawable/button_color" />

                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/carrier_param" />

                    <Spinner
                        android:id="@+id/spinner5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </TableRow>

                <TableRow
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right">

                        <Button
                            android:id="@+id/Button02"
                            android:layout_width="120dp"
                            android:layout_height="50dp"
                            android:background="@drawable/btn_stype"
                            android:text="@string/str_query"
                            android:textColor="@drawable/button_color" />

                        <Button
                            android:id="@+id/button2"
                            android:layout_width="120dp"
                            android:layout_height="50dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/btn_stype"
                            android:text="@string/str_set"
                            android:textColor="@drawable/button_color" />

                    </LinearLayout>

                </TableRow>

            </TableLayout>


        </RelativeLayout>
    </android.support.constraint.ConstraintLayout>

</LinearLayout>